# wo-bist-du-seegras

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  environment.yml  pyproject.toml  requirements.txt  tox.ini
.github/actions/setup-poetry-env/: action.yml
.github/workflows/: main.yml
baltic_seagrass/: __init__.py  __main__.py  cli.py
baltic_seagrass/config/: base.yml  grounding_dino.yml  resnet18.yml  seaclips.yml  seafeats.yml
baltic_seagrass/core/: config_loader.py  data_loader.py  datumaru_processor.py  evaluator.py  fiftyone_logger.py  model_factory.py  trainer.py  video_processor.py
baltic_seagrass/core/datasets/: seagrass.py  seegras.py
baltic_seagrass/core/models/: bag_of_seagrass.py
baltic_seagrass/scripts/: classifier_inference.py  dataloader_script.py  evaluation_script.py  inference_patched_script.py  training_script.py
data/annotations/: DJI_20240923162615_0002_D_compressed50_10to12.json  DJI_20240923162615_0002_D_compressed50_14to16.json
deprecated/: sampler.py
notebooks/: notebook.ipynb
tests/: test_bag_of_seagrass.py  test_bag_of_seagrass_integration.py  test_binary_resnet18.py  test_config_loader.py  test_dataloader.py  test_dataset.py  test_datumaru.py  test_evaluate.py  test_evaluation.py  test_main.py  test_model_factory.py  test_trainer.py  test_video_processor.py  utils.py
zug_seegras/: __init__.py  __main__.py  core.py  logger.py  utils.py
zug_seegras/config/: base.yml  config.yml  resnet18.yml  resnet_config.yml  seabag_ensemble.yml  seaclips.yml  seafeats.yml
zug_seegras/core/: bag_of_seagrass.py  classification_models.py  config_loader.py  data_loader.py  dataset.py  datumaru_processor.py  evaluation.py  evaluator.py  fiftyone_logger.py  model_factory.py  trainer.py  video_processor.py
zug_seegras/core/datasets/: seegras.py
zug_seegras/core/models/: bag_of_seagrass.py  binary_resnet.py  grounding_dino.py
zug_seegras/deprecated/: sampler.py
zug_seegras/scripts/: dataloader_script.py  evaluation_script.py  inference_patched_script.py  training_script.py
